--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,3 @@
 # Introducing Abstract
 
-Hello, world!
+Abstract is an Ethereum L2 designed for consumer facing applications across DeFi, SocialFi, NFTs, and more. Abstract is EVM-compatible and supports all existing Ethereum tooling, including MetaMask, Foundry, Hardhat and others.
