--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -5,9 +5,10 @@ Abstract is an Ethereum L2 designed for consumer facing applications across DeFi
 ## Why Abstract?
 
 Abstract is a Layer 2 ZK rollup built on top of Ethereum using the [ZK Stack](https://docs.zksync.io/zk-stack).
-
 Abstract leverages advanced zero-knowledge cryptography to build a scalable blockchain that looks and feels like Ethereum, but with lower costs and higher throughput.
 
 Abstract is EVM-compatible, which means smart contracts are written in Solidity/Vyper and can be called with the same clients as other EVM-compatible chains.
-
 Most existing smart contracts will work out of the box with Abstract, so migrating your apps will be seamless.
+
+Abstract scales Ethereum by moving computation off-chain and verifying batches of transactions through ZK proofs.
+This allows Abstract to scale Ethereum while still inheriting its security properties, including censorship resistance and liveness guarantees.
