--- a/pages/overview.mdx
+++ b/pages/overview.mdx
@@ -28,7 +28,7 @@ Furthermore, Abstract uses state diffs, which reduces the amount of data submitt
 
 ## Rollup Tech
 
-Abstract is built using [zkSyncs's ZK stack](https://docs.zksync.io/zk-stack).
+Abstract is built using [ZK stack](https://docs.zksync.io/zk-stack).
 ZK stack is the latest version of zkSync technology which includes a complete zk rollup system, a sequencer, token bridges, fraud proofs, and more.
 Complete documentation of ZK stack can be found on [Github](https://github.com/matter-labs/zksync).
 
