--- a/pages/tooling/zksync_cli.mdx
+++ b/pages/tooling/zksync_cli.mdx
@@ -27,10 +27,10 @@ npm update -g zksync-cli
 
 ## Available Commands
 
-- [`dev`](zksync-cli/zksync-cli-dev): Start a local development environment with Abstract and Ethereum nodes.
-- [`create`](zksync-cli/zksync-cli-create): Scaffold new projects using templates for frontend, contracts, and scripting.
-- [`contract`](zksync-cli/zksync-cli-contract): Read and write data to Abstract contracts without building UI.
-- [`transaction`](zksync-cli/zksync-cli-transaction): Fetch and display detailed information about a specific transaction.
-- [`wallet`](zksync-cli/zksync-cli-wallet): Manage Abstract wallet assets, including transfers and balance checks.
-- [`bridge`](zksync-cli/zksync-cli-bridge): Perform deposits and withdrawals between Ethereum and Abstract.
-- [`config chains`](zksync-cli/zksync-cli-config-chains): Add or edit custom chains for flexible testing and development.
+- `dev`: Start a local development environment with Abstract and Ethereum nodes.
+- `create`: Scaffold new projects using templates for frontend, contracts, and scripting.
+- `contract`: Read and write data to Abstract contracts without building UI.
+- `transaction`: Fetch and display detailed information about a specific transaction.
+- `wallet`: Manage Abstract wallet assets, including transfers and balance checks.
+- `bridge`: Perform deposits and withdrawals between Ethereum and Abstract.
+- `config chains`: Add or edit custom chains for flexible testing and development.
