--- a/pages/evm_differences.mdx
+++ b/pages/evm_differences.mdx
@@ -29,3 +29,27 @@ Ethereum cryptographic primitives like `ecrecover`, `keccak256`, `sha256`, `ecad
 No actions are required from your side as all the calls to the precompiles are done by the compilers under the hood.
 
 It's important to be aware that the gas costs and behaviors of these precompiles when invoked via delegatecall may differ from those on Ethereum.
+
+## Account Abstraction (AA)
+
+The native account abstraction of Abstract and Ethereum's EIP 4337 aim to enhance
+accounts' flexibility and user experience, but they differ in critical aspects listed below:
+
+1. **Implementation Level**: Abstract's account abstraction is integrated at the
+protocol level; however, EIP 4337 avoids the implementation at the protocol level.
+2. **Account Types**: on Abstract, smart contract accounts and paymasters are
+first-class citizens. Under the hood, all accounts (even EOAs) behave like smart
+contract accounts; **all accounts support paymasters**.
+3. **Transaction Processing**: EIP 4337 introduces a separate transaction flow for
+smart contract accounts, which relies on a separate mempool for user operations, and
+Bundlers - nodes that bundle user operations and sends them to be processed by the
+EntryPoint contract, resulting in two separate transaction flows. In contrast, on
+Abstract there is a unified mempool for transactions from both Externally Owned
+Accounts (EOAs) and smart contract accounts. On Abstract, the Operator takes on
+the role of bundling transactions, irrespective of the account type, and sends them
+to the Bootloader (similar to the EntryPoint contract), which results in a single
+mempool and transaction flow.
+4. **Paymasters support**: Abstract allows both EOAs and smart contract accounts
+to benefit from paymasters thanks to its single transaction flow. On the other hand,
+EIP 4337 does not support paymasters for EOAs because paymasters are only
+implemented in the new transaction flow for smart contract accounts.
