--- a/pages/account_abstraction/introduction.mdx
+++ b/pages/account_abstraction/introduction.mdx
@@ -1,5 +1,6 @@
 # Introduction
 
+Abstract supports account abstraction at the chain level, which is different from Ethereum.
 Account Abstraction related content has been forked from [zkSync's docs](https://docs.zksync.io/build/developer-reference/account-abstraction).
 
 ### Accounts
