Add docs for writing your first contract

--- a/pages/tooling/hardhat.mdx
+++ b/pages/tooling/hardhat.mdx
@@ -148,7 +148,7 @@ Passing the `--network` flag we make sure Hardhat will use the zksolc compiler (
 This command will compile all contracts in the `/contracts` folder and create the folders `artifacts-zk` and `cache-zk`.
 
 If your contracts import any non-inlineable libraries, you need to configure them in the `hardhat.config.ts` file.
-Find more info and examples about [compiling libraries here](/build/tooling/hardhat/compiling-libraries).
+Find more info and examples about [compiling libraries here](https://docs.zksync.io/build/tooling/hardhat/compiling-libraries).
 
 ## Deploy contracts
 
