Add switch network button to testnet page

--- a/pages/network_info/testnet.mdx
+++ b/pages/network_info/testnet.mdx
@@ -8,3 +8,9 @@ In order to connect to the Abstract testnet, you'll need to add a new network wi
 - RPC URL: `https://api.testnet.abs.xyz`
 - Explorer: `https://explorer.testnet.abs.xyz`
 - Currency Symbol: `ETH`
+
+To switch to Abstract's network, simply click on the button below once you have a wallet installed.
+
+import SwitchNetworkButton from "../../components/switch_network_button";
+
+<SwitchNetworkButton />
