--- a/pages/your_first_contract/setup.mdx
+++ b/pages/your_first_contract/setup.mdx
@@ -50,6 +50,16 @@ Your output will look something like below:
 ✔ Do you want to install this sample project's dependencies with npm (hardhat @nomicfoundation/hardhat-toolbox)? (Y/n) · y
 ```
 
+## Install Hardhat plugin
+
+```bash
+# For npm
+npm i -D @matterlabs/hardhat-zksync
+
+# For yarn
+yarn add -D @matterlabs/hardhat-zksync
+```
+
 ## Hardhat Config
 
 Every hardhat project has a `hardhat.config.ts` file that defines various project settings.
