Update hardhat docs

--- a/pages/your_first_contract/setup.mdx
+++ b/pages/your_first_contract/setup.mdx
@@ -17,7 +17,15 @@ npm init
 yarn init
 ```
 
-You can the follow the instructions [here](/tooling/hardhat#install-dependencies) to install hardhat in your working directory.
+You can the follow the instructions [here](/tooling/hardhat#install-dependencies) or below to install hardhat in your working directory.
+
+```bash
+# For npm
+npm i -D @matterlabs/hardhat-zksync
+
+# For yarn
+yarn add -D @matterlabs/hardhat-zksync
+```
 
 ## Initializing the Project
 
@@ -48,16 +56,6 @@ Your output will look something like below:
 ✔ Hardhat project root: · <YOUR DIRECTORY>
 ✔ Do you want to add a .gitignore? (Y/n) · y
 ✔ Do you want to install this sample project's dependencies with npm (hardhat @nomicfoundation/hardhat-toolbox)? (Y/n) · y
-```
-
-## Install Hardhat plugin
-
-```bash
-# For npm
-npm i -D @matterlabs/hardhat-zksync
-
-# For yarn
-yarn add -D @matterlabs/hardhat-zksync
 ```
 
 ## Hardhat Config
