Update and rename glossory.mdx to glossary.mdx

--- a/pages/glossary.mdx
+++ b/pages/glossary.mdx
@@ -1,6 +1,6 @@
-# Glossory
+# Glossary
 
-A dictionary designed for educational purposes, providing essential terminology to support users to gain a clearer understanding through Abstract Documentation. The contents of this section were inspired by [ZKsync's Glossory](https://docs.zksync.io/build/resources/glossary) 
+A dictionary designed for educational purposes, providing essential terminology to support users to gain a clearer understanding through Abstract Documentation. The contents of this section were inspired by [ZKsync's Glossary](https://docs.zksync.io/build/resources/glossary) 
 
 ### Account Abstraction
 
