--- a/pages/account_abstraction/building_smart_accounts.mdx
+++ b/pages/account_abstraction/building_smart_accounts.mdx
@@ -5,7 +5,7 @@ interfaces and follow our recommended best practices for account deployment and 
 
 ### Interface Implementation
 
-Every custom account should implement the [IAccount](https://github.com/Abstract-Foundation/abstract-docs/blob/62bbc18497c58bfa10c61aa51b261c66283bc60d/pages/account_abstraction/design.mdx#L4)
+Every custom account should implement the [IAccount](https://github.com/matter-labs/era-contracts/blob/main/system-contracts/contracts/interfaces/IAccount.sol)
 interface. You can find an example of a typical account implementation, resembling
 standard Externally Owned Accounts (EOA) on Ethereum, in the
 [DefaultAccount.sol](https://github.com/matter-labs/era-contracts/blob/main/system-contracts/contracts/DefaultAccount.sol) on GitHub.
