--- a/pages/glossary.mdx
+++ b/pages/glossary.mdx
@@ -6,17 +6,13 @@ A dictionary designed for educational purposes, providing essential terminology 
 
 Account Abstraction enhances transaction authorizations by making them programmable, offering more flexibility than Externally Owned Accounts (EOAs). This innovation aims to enrich user experiences and broaden the scope of transaction authorizations, differing from EIP-4337.
 
-### EIP-4337
+### EVM Equivalence
 
-Initiatively define as a Account Abstraction or Smart Wallet built via Smart Contract seperate from general web3 wallet which is alternatively known and classified as a EOA (Externally Owned Account) with a purpose of User Experience Enhancement by grouping transactions before submitting them to the network as a bundle. EIP-4337 was publicly launched by March 2024 on Ethereum Mainnet with reference from previous Ethereum Improvement Proposals (EIPs) 2938 and 3074.
-
-### EVM Equivalent
-
-EVM Equivalent means that a given protocol supports every opcode of Ethereum’s EVM down to the bytecode. Thus, any EVM smart contract works with 100% assurance out of the box.
+EVM Equivalence means that a given protocol supports every opcode of Ethereum’s EVM down to the bytecode. Thus, any EVM smart contract works with 100% assurance out of the box.
 
 ### EVM Compatible
 
-EVM Compatible means that a percentage of the opcodes of Ethereum’s EVM are supported; thus, a percentage of smart contracts work out of the box. Abstract is optimized to be EVM source-code compatible (with a custom compiler), not EVM equivalent.
+EVM Compatible means that a large percentage of the opcodes of Ethereum’s EVM are supported; thus, a percentage of smart contracts work out of the box. Abstract is optimized to be EVM source-code compatible (with a custom compiler), not EVM equivalence.
 
 ### Layer 1
 
@@ -29,10 +25,6 @@ Layer 2 refers to seperate blockchain networks built on top of an existing block
 ### Paymaster
 
 Enabling users to pay transaction fees (Network Fees) in ERC20 tokens with innovative approach to account management significantly enhances user experience, security, and flexibility, paving the way for broader adoption of blockchain technology. 
-
-### Rollups
-
-Practically, it bundles many transactions into a single transaction via a smart contract before submitting them to Layer 1. This distributes the L1 transaction fees across everyone in the rollup, making it cheaper for each user to interact with blockchain.
 
 ### ZK Rollup
 
