fix: code snippet use typescript

--- a/pages/getting_started.mdx
+++ b/pages/getting_started.mdx
@@ -28,9 +28,9 @@ npm i -D @matterlabs/hardhat-zksync
 
 ### Update the Hardhat Configuration
 
-Update your `hardhat.config.js` file to include the plugin and define the Abstract testnet network:
+Update your `hardhat.config.ts` file to include the plugin and define the Abstract testnet network:
 
-```javascript
+```typescript
 import { HardhatUserConfig } from "hardhat/config";
  
 import "@matterlabs/hardhat-zksync";
