--- a/pages/network_info/testnet.mdx
+++ b/pages/network_info/testnet.mdx
@@ -6,6 +6,7 @@ In order to connect to the Abstract testnet, you'll need to add a new network wi
 - Description: **The public testnet for Abstract.**
 - Chain ID: `11124`
 - RPC URL: `https://api.testnet.abs.xyz`
+- RPC URL (Websocket): `ws://api.testnet.abs.xyz/ws` 
 - Explorer: `https://explorer.testnet.abs.xyz`
 - Currency Symbol: `ETH`
 
