Add verify URL to network info

--- a/pages/network_info/testnet.mdx
+++ b/pages/network_info/testnet.mdx
@@ -8,6 +8,7 @@ In order to connect to the Abstract testnet, you'll need to add a new network wi
 - RPC URL: `https://api.testnet.abs.xyz`
 - RPC URL (Websocket): `ws://api.testnet.abs.xyz/ws` 
 - Explorer: `https://explorer.testnet.abs.xyz`
+- Verify URL: https://api-explorer-verify.testnet.abs.xyz/contract_verification
 - Currency Symbol: `ETH`
 
 To switch to Abstract's network, simply click on the button below once you have a wallet installed.
