Sync the content on faucets
updated bridging channels and add-up internal linking to bridge section for ux since I saw the details clarified how bridging, native bridge, and 3rd parties works.

--- a/pages/tools_integrations/faucets.mdx
+++ b/pages/tools_integrations/faucets.mdx
@@ -22,4 +22,4 @@ In order to get Sepolia ETH, you can use one of the following resources:
 - https://www.infura.io/faucet/sepolia
 - https://faucet.quicknode.com/ethereum/sepolia
 
-Once you've received your Sepolia Ether, you can bridge it to Abstract using our [native bridge](https://portal.testnet.abs.xyz/bridge/).
+Once you've received your Sepolia Ether, you can bridge it to Abstract using our [native bridge](https://portal.testnet.abs.xyz/bridge/) or [third-party bridge](https://testnets.relay.link/abstract). you can find more details about the difference between native bridge and third-party bridge on [bridge](https://docs.abs.xyz/tools_integrations/bridge).
